<resources>
    <string name="app_name">Contact Manager</string>
    <string name="action_settings">Settings</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_contact">Enter Contact</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_number">Number</string>
    <string name="save_button">Save</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no_text">no</string>
    <string name="yes_text">yes</string>
    <string name="edit_information">Edit Contact</string>
    <string name="update_text">Update</string>
</resources>
