<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout

            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_contact"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/contactName"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:hint="@string/hint_name"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/contactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contactName"
                android:hint="@string/hint_number"
                android:inputType="number" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contactNumber"
                android:layout_marginEnd="5dp"
                android:background="@color/colorSave"
                android:text="@string/save_button"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>